Bug 392705 - Drag and drop does not work: Sorting in play lists and play queue does not work
Summary: Drag and drop does not work: Sorting in play lists and play queue does not work
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: 17.12.3
Platform: openSUSE Linux
: HI major
Target Milestone: ---
Assignee: Michael Pyne
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-04 10:28 UTC by Jarosław Staniek
Modified: 2019-06-25 10:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2018-04-04 10:28:56 UTC
Hi!
Drag and drop does not work: Sorting in play lists and play queue does not work.
Lack of drag and drop support means it is also not possible to drag an item onto play queue or play list.

I do not see other way to perform these actions than using drag and drop.
Comment 1 Michael Pyne 2018-04-05 01:57:54 UTC
I've been tracking this myself but good to have a reported bug for it since I haven't been able to fix it yet
Comment 2 Michael D 2019-02-28 11:16:48 UTC
Sorting by column in playlists works for me. Manjaro, juk 18.12.2. Drag and drop doesn't, though.
Comment 3 Michael Pyne 2019-05-18 18:48:18 UTC
Git commit dc2d9c8e0fe64ff6059b0f5ca927ff338e7eeca4 by Michael Pyne.
Committed on 18/05/2019 at 04:27.
Pushed by mpyne into branch 'Applications/19.04'.

Add 'override' decl to fix compiler warnings, fix drag-and-drop.

This should shave off some 1,000+ warnings over the course of a build
with GCC 9.1.

This only addresses class declarations native to JuK, but Taglib and to
a lesser extent Qt5 moc still have (or generate) code that can result in
compiler warnings about suggested override declarations.

In the process I noticed that an existing drag-and-drop support function
(Playlist::decode) is no longer overriding Qt virtual functions, so it
has been turned into an auxiliary function to fix existing drag-and-drop
bugs from the KF5 port (tested by dropping files from Dolphin into a
playlist view).

Drag-and-drop from a playlist to another playlist (by dropping on the
playlist name) still remains broken for now.
FIXED-IN:19.04.2

M  +0    -5    collectionlist.cpp
M  +10   -10   collectionlist.h
M  +2    -2    coverdialog.cpp
M  +2    -2    coverinfo.cpp
M  +1    -1    deletedialog.h
M  +1    -1    directorylist.h
M  +2    -1    dynamicplaylist.cpp
M  +5    -5    dynamicplaylist.h
M  +2    -2    exampleoptions.h
M  +3    -3    filehandleproperties.h
M  +22   -22   filerenamer.h
M  +1    -1    filerenamerconfigdlg.h
M  +1    -1    filerenameroptions.h
M  +2    -2    folderplaylist.h
M  +5    -5    historyplaylist.h
M  +2    -2    juk-exception.h
M  +2    -2    juk.h
M  +1    -3    lyricswidget.h
M  +9    -9    nowplaying.h
M  +12   -15   playlist.cpp
M  +22   -23   playlist.h
M  +15   -15   playlistbox.h
M  +8    -8    playlistcollection.h
M  +1    -1    playlistitem.h
M  +2    -2    searchplaylist.h
M  +1    -1    searchwidget.h
M  +8    -8    slider.h
M  +1    -1    statuslabel.h
M  +6    -6    systemtray.h
M  +7    -7    tageditor.cpp
M  +1    -1    tageditor.h
M  +1    -1    tagguesserconfigdlg.h
M  +8    -8    tracksequenceiterator.h
M  +1    -1    treeviewitemplaylist.h
M  +9    -9    upcomingplaylist.h
M  +17   -12   viewmode.h
M  +2    -2    volumepopupbutton.h

https://invent.kde.org/kde/juk/commit/dc2d9c8e0fe64ff6059b0f5ca927ff338e7eeca4
Comment 4 Michael Pyne 2019-06-23 19:29:45 UTC
Git commit 55a6bd7170e5b2ca6e9f826232574f2136a1648a by Michael Pyne.
Committed on 23/06/2019 at 19:13.
Pushed by mpyne into branch 'Applications/19.04'.

Fix drag-and-drop of playlist items onto a playlist icon.

This allows you to drag music tracks onto a different playlist, by
dropping the selected tracks onto the name of a different playlist.

There still seem to be other bugs (Dragging items onto play queue
doesn't enable play queue automatically; some playlists aren't properly
saved for some reason). But those will have to be fixed in other
commits.

FIXED-IN:19.04.3

M  +45   -2    playlistbox.cpp
M  +3    -0    playlistbox.h

https://invent.kde.org/kde/juk/commit/55a6bd7170e5b2ca6e9f826232574f2136a1648a
Comment 5 Michael D 2019-06-25 10:56:27 UTC
Thanks for the fixes.