Fix drag-and-drop of playlist items onto a playlist icon.

This allows you to drag music tracks onto a different playlist, by
dropping the selected tracks onto the name of a different playlist.

There still seem to be other bugs (Dragging items onto play queue
doesn't enable play queue automatically; some playlists aren't properly
saved for some reason). But those will have to be fixed in other
commits.

FIXED-IN:19.04.3
BUG:392705